--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
           </div>
         </div>
       </section>
+      <section id="second">
+        <div class="container"></div>
+      </section>
+      <section id="third">
+        <div class="container"></div>
+      </section>
+      <section id="fourth">
+        <div class="container"></div>
+      </section>
+      <section id="fifth">
+        <div class="container"></div>
+      </section>
+      <section id="author">
+        <div class="container"></div>
+      </section>
+      <section id="revs">
+        <div class="container"></div>
+      </section>
       <footer>
         <div class="container">
           <hr class="footer-hr"><a href="https:/iomp.ru/" target="_blank"><img class="footer-logo" src="img/images/footer-logo.png" alt="Логотип"/></a>
@@ -111,6 +129,35 @@
           <hr class="footer-hr"><a class="footer-docs" href="https://iomp.ru/privacy" download target="_blank">Политика конфиденциальности.</a><a class="footer-docs" href="https://iomp.ru/public-offer" download target="_blank">Публичная оферта.</a>
         </div>
       </footer>
+    </div>
+    <div class="white-popup mfp-hide" id="Modal">
+      <div class="modal-content">
+        <form class="form form-modal" action="https://shop.iomp.ru/?r=personal/newsletter/sub/add&id=33401&lg=ru&Contact[id_newsletter]=423" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
+          <div class="email-block email-block-form">
+            <input type="hidden" value="1" name="required_fields[email]">
+            <input class="input input-mail input-mail-modal" name="Contact[email]" type="text" placeholder="E-mail">
+          </div>
+          <div class="button-wrapper">
+            <button class="button button-form button-form-modal" type="submit">Зарегистрироваться</button>
+          </div>
+          <div class="clearfix"></div>
+          <p class="alert-message"></p>
+          <div class="checking checking-modal">
+            <input class="check" type="checkbox" id="check-m">
+            <label class="check-label" for="check-m">Я согласен с <a href="https://iomp.ru/privacy" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
+          </div>
+          <div style="display: none;">
+            <div style="display: none;">
+              <input type="hidden" value="423" name="Contact[id_newsletter]">
+            </div><!-- API код канала рекламы -->
+            <input type="hidden" value="0" name="Contact[id_advertising_channel_page]">
+            <input type="hidden" name="formId" value="199">
+            <input type="hidden" name="formVc" value="1258434519">
+            <input type="hidden" name="_aid" value="">
+            <input type="hidden" name="_vcaid" value="">
+          </div>
+        </form>
+      </div>
     </div>
     <script src="js/libs.min.js"></script>
     <script src="js/scripts.min.js"></script>
