Main page is typeseted

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <p class="main-pre"></p>
-              <h1 class="main-title"></h1>
-              <p class="main-text"></p>
-              <p class="main-author-author"></p>
-              <p class="main-text"></p>
-              <p class="main-date"></p>
+              <p class="main-pre">Открытый онлайн мастер-класс</p>
+              <h1 class="main-title">Системно-родовая терапия</h1>
+              <p class="main-text">Освой самый эффективный инструмент современной психологии.</p>
+              <p class="main-author">Автор: Жанна Абрамова</p>
+              <p class="main-text">Идейный наследник теорий Берта Хеллингера. Последовательно развивала через практический опыт направление системных расстановок.</p>
+              <p class="main-date">Даты проведения 11.11.11</p>
               <form class="form form-maan" action="https://shop.iomp.ru/?r=personal/newsletter/sub/add&id=33401&lg=ru&Contact[id_newsletter]=423" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
                 <div class="email-block email-block-form">
                   <input type="hidden" value="1" name="required_fields[email]">
@@ -85,31 +85,95 @@
               </form>
             </div>
             <div class="col-md-6">
-              <div class="main-img">
+              <div class="general-img">
                 <div class="rhomb rhomb-main-1"></div>
-                <div class="rhomb rhomb-main-2"></div><img class="mob-none" src="img/images/main.png" alt="Изображение блока"/><img class="d-none" src="img/images/main-mob.png" alt="Изображение блока"/>
+                <div class="rhomb rhomb-main-2"></div><img src="img/images/main.png" srcset="img/images/main-mob.png 560w, img/images/main.png 734w" alt="Изображение блока"/>
               </div>
             </div>
           </div>
         </div>
       </section>
       <section id="second">
-        <div class="container"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-md-push-6">
+              <h3 class="general-title">Системно-родовая терапия<span>работает там где классическая психология бессильна.</span></h3>
+              <p class="general-text">Научим быстро находить отправную точку любой проблемы и  управлять бессознательными процессами.</p>
+              <div class="button-wrapper mob-none"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
+            </div>
+            <div class="col-md-6 col-md-pull-6">
+              <div class="general-img"><img class="mob-none" src="img/images/second.png" srcset="img/images/second-mob.png 560w, img/images/second.png 596w" alt="Картинка блока"/>
+              </div>
+              <div class="button-wrapper d-none"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="third">
-        <div class="container"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h3 class="general-title">Профессия психотерапевта</h3>
+              <p class="general-title">Обучаясь в “Институте Современной Психологии” по направлению “Системно-родовая терапия”, с выдачей диплома дающим право заниматься профессиональной деятельностью в сфере психотерапии, вы получите самые передовые знания.</p>
+              <div class="button-wrapper"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="fourth">
-        <div class="container"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-md-push-6">
+              <h3 class="general-title">Системно-родовая терапия.</h3>
+              <p class="general-text">Это мощная личная проработка, решение практически любой проблемы в области психического здоровья. <br>Ответы на все вопросы в области предназначения, финансов, здоровья и отношений.</p>
+              <div class="button-wrapper mob-none"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
+            </div>
+            <div class="col-md-6 col-md-pull-6">
+              <div class="general-img"><img class="mob-none" src="img/images/fourth.png" srcset="img/images/fourth-mob.png 560w, img/images/fourth.png 646w" alt="Картинка блока"/>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="fifth">
-        <div class="container"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h3 class="general-title"><span>Основа</span> системно-родовой терапии - <span>идеи Берта Хеллингера</span></h3>
+              <p class="general-text">Идеи Берта Хеллингера оказали огромное влияние на современную психотерапию и получили признание в профессиональных кругах.</p>
+              <div class="button-wrapper"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="general-img"><img class="mob-none" src="img/images/fifth.png" srcset="img/images/fifth-mob.png 560w, img/images/fifth.png 730w" alt="Картинка блока"/>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="author">
-        <div class="container"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-md-offset-6">
+              <h3 class="author-title"><small>Автор курса</small>Жанна Абрамова</h3>
+              <ul class="general-list">
+                <li>Клинический психолог, гештальт-терапевт, гипнотерапевт;</li>
+                <li>Мастер практической психологии и технологий осознанности;</li>
+                <li>Коуч, тренер обучающих и трансформационных программ;</li>
+                <li>Мастер НЛП терапии и ДСТ (терапия диссоциированных состояний);</li>
+                <li>Процессор техник РПТ, тетахилинга, терапевт новой германской медицины;</li>
+                <li>Мастер метафорических карт (МАК), системно-родовой терапии, технологии мгновенного исцеления, регрессивного гипноза;</li>
+                <li>Автор курсов по новой системной психологии, МАК, системной терапии, коучинга, НЛП терапии</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="revs">
-        <div class="container"></div>
+        <div class="container">
+          <h3 class="general-title">Что говорят про “Системно-родовую терапию” наши студенты</h3>
+          <div class="revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a>
+          </div>
+        </div>
       </section>
       <footer>
         <div class="container">
@@ -159,7 +223,7 @@
         </form>
       </div>
     </div>
-    <script src="js/libs.min.js"></script>
+    <script src="js/lib.min.js"></script>
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
