--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="container"><a href="https://iomp.ru" target="_blank"><img class="header-logo" src="img/images/header-logo.png" alt="Логотип"></a>
           <div class="header-nav">
             <ul class="header-menu">
-              <li><a href="#">Психологам</a></li>
-              <li><a href="#">Новая профессия</a></li>
-              <li><a href="#">Личная трансформация</a></li>
+              <li><a href="#second">Психологам</a></li>
+              <li><a href="#third">Новая профессия</a></li>
+              <li><a href="#fourth">Личная трансформация</a></li>
               <li><a href="#revs">Отзывы</a></li>
             </ul>
           </div>
@@ -51,14 +51,14 @@
       <section id="main">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-7">
               <p class="main-pre">Открытый онлайн мастер-класс</p>
               <h1 class="main-title">Системно-родовая терапия</h1>
               <p class="main-text">Освой самый эффективный инструмент современной психологии.</p>
               <p class="main-author">Автор: Жанна Абрамова</p>
               <p class="main-text">Идейный наследник теорий Берта Хеллингера. Последовательно развивала через практический опыт направление системных расстановок.</p>
               <p class="main-date">Даты проведения 11.11.11</p>
-              <form class="form form-maan" action="https://shop.iomp.ru/?r=personal/newsletter/sub/add&id=33401&lg=ru&Contact[id_newsletter]=423" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
+              <form class="form form-main" action="https://shop.iomp.ru/?r=personal/newsletter/sub/add&id=33401&lg=ru&Contact[id_newsletter]=423" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
                 <div class="email-block email-block-form">
                   <input type="hidden" value="1" name="required_fields[email]">
                   <input class="input input-mail input-mail-main" name="Contact[email]" type="text" placeholder="E-mail">
@@ -84,10 +84,10 @@
                 </div>
               </form>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-5">
               <div class="general-img">
                 <div class="rhomb rhomb-main-1"></div>
-                <div class="rhomb rhomb-main-2"></div><img src="img/images/main.png" srcset="img/images/main-mob.png 560w, img/images/main.png 734w" alt="Изображение блока"/>
+                <div class="rhomb rhomb-main-2"></div><img class="mob-none" src="img/images/main.png" alt="Изображение блока"/><img class="d-none" src="img/images/main-mob.png" alt="Изображение блока"/>
               </div>
             </div>
           </div>
@@ -97,14 +97,17 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-md-push-6">
-              <h3 class="general-title">Системно-родовая терапия<span>работает там где классическая психология бессильна.</span></h3>
+              <h3 class="general-title">Системно-родовая терапия <span>работает там, где классическая психология бессильна.</span></h3>
               <p class="general-text">Научим быстро находить отправную точку любой проблемы и  управлять бессознательными процессами.</p>
               <div class="button-wrapper mob-none"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
             </div>
-            <div class="col-md-6 col-md-pull-6">
-              <div class="general-img"><img class="mob-none" src="img/images/second.png" srcset="img/images/second-mob.png 560w, img/images/second.png 596w" alt="Картинка блока"/>
+            <div class="col-md-5 col-md-pull-6">
+              <div class="general-img general-img-right">
+                <div class="rhomb rhomb-second-1"></div>
+                <div class="rhomb rhomb-second-2"></div>
+                <div class="rhomb rhomb-second-3"></div><img class="mob-none" src="img/images/second.png" alt="Картинка блока"/><img class="d-none" src="img/images/second-mob.png" alt="Картинка блока"/>
               </div>
-              <div class="button-wrapper d-none"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
+              <div class="button-wrapper d-none"><a class="button button-up" href="#Modal">Записаться на мастер-класс</a></div>
             </div>
           </div>
         </div>
@@ -114,8 +117,14 @@
           <div class="row">
             <div class="col-md-6">
               <h3 class="general-title">Профессия психотерапевта</h3>
-              <p class="general-title">Обучаясь в “Институте Современной Психологии” по направлению “Системно-родовая терапия”, с выдачей диплома дающим право заниматься профессиональной деятельностью в сфере психотерапии, вы получите самые передовые знания.</p>
-              <div class="button-wrapper"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
+              <p class="general-text">Обучаясь в “Институте Современной Психологии” по направлению “Системно-родовая терапия”, с выдачей диплома дающим право заниматься профессиональной деятельностью в сфере психотерапии, вы получите самые передовые знания.</p>
+              <div class="button-wrapper"><a class="button button-up" href="#Modal">Записаться на мастер-класс</a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="general-img">
+                <div class="rhomb rhomb-white rhomb-third-1"></div>
+                <div class="rhomb rhomb-white rhomb-third-2"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -125,11 +134,12 @@
           <div class="row">
             <div class="col-md-6 col-md-push-6">
               <h3 class="general-title">Системно-родовая терапия.</h3>
-              <p class="general-text">Это мощная личная проработка, решение практически любой проблемы в области психического здоровья. <br>Ответы на все вопросы в области предназначения, финансов, здоровья и отношений.</p>
-              <div class="button-wrapper mob-none"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
+              <p class="general-text">Это мощная личная проработка, решение практически любой проблемы в области психического здоровья.<br>Ответы на все вопросы в области предназначения, финансов, здоровья и отношений.</p>
+              <div class="button-wrapper mob-none"><a class="button button-up" href="#Modal">Записаться на мастер-класс</a></div>
             </div>
-            <div class="col-md-6 col-md-pull-6">
-              <div class="general-img"><img class="mob-none" src="img/images/fourth.png" srcset="img/images/fourth-mob.png 560w, img/images/fourth.png 646w" alt="Картинка блока"/>
+            <div class="col-md-5 col-md-pull-6">
+              <div class="general-img general-img-right general-img-fourth">
+                <div class="rhomb rhomb-fourth"></div><img class="mob-none" src="img/images/fourth.png" alt="Картинка блока"/><img class="d-none" src="img/images/fourth-mob.png" alt="Картинка блока"/>
               </div>
             </div>
           </div>
@@ -144,7 +154,7 @@
               <div class="button-wrapper"><a class="button button-up" href="#Modal">Записаться на мастер-клас</a></div>
             </div>
             <div class="col-md-6">
-              <div class="general-img"><img class="mob-none" src="img/images/fifth.png" srcset="img/images/fifth-mob.png 560w, img/images/fifth.png 730w" alt="Картинка блока"/>
+              <div class="general-img general-img-fifth"><img class="mob-none" src="img/images/fifth.png" alt="Картинка блока"/><img class="d-none" src="img/images/fifth-mob.png" alt="Картинка блока"/>
               </div>
             </div>
           </div>
@@ -170,8 +180,12 @@
       </section>
       <section id="revs">
         <div class="container">
-          <h3 class="general-title">Что говорят про “Системно-родовую терапию” наши студенты</h3>
-          <div class="revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a>
+          <div class="row">
+            <div class="col-md-10">
+              <h3 class="general-title">Что говорят про “Системно-родовую терапию” наши студенты</h3>
+            </div>
+          </div>
+          <div class="revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a>
           </div>
         </div>
       </section>
