--- a/promo/index.html
+++ b/promo/index.html
@@ -32,7 +32,7 @@
     </noscript><!-- /Yandex.Metrika counter -->
     <div class="wrapper">
       <header>
-        <div class="container"><a href="https://iomp.ru" target="_blank"><img class="header-logo" src="../img/images/header-logo.png" alt="Логотип"></a></div>
+        <div class="container"><a href="https://iomp.ru" target="_blank"><img class="header-logo" src="../img/images/logo.png" alt="Логотип"></a></div>
       </header>
       <section id="main">
         <div class="container">
@@ -54,7 +54,7 @@
     </div>
     <footer>
       <div class="container">
-        <hr class="footer-hr"><a href="https:/iomp.ru/" target="_blank"><img class="footer-logo" src="../img/images/footer-logo.png" alt="Логотип"/></a>
+        <hr class="footer-hr"><a href="https:/iomp.ru/" target="_blank"><img class="footer-logo" src="../img/images/logo.png" alt="Логотип"></a>
         <div class="row">
           <div class="col-md-6">
             <p class="footer-text">125315, г. Москва, пр-кт Ленинградский, д. 68, стр. 24, эт/пом/ком 2/IV/20</p>
